# find_a_job_automator

./: .env.example  .gitattributes  .gitignore  AI_README.md  PROJECT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: job_search_profile.yml
.github/workflows/: configure_profile.yml  daily_run.yml  pages.yml
config/: profile.json  ranker.yaml  settings.yaml  sources.yaml
config/domains/: creative.yaml  education.yaml  engineering.yaml  finance.yaml  general.yaml  government.yaml  healthcare.yaml  hospitality.yaml  legal.yaml  science.yaml  trades.yaml
data/: dashboard.html  jobs.db  jobs.xlsx  quota.jsonl
data/backups/: jobs.2026-06-18.1.xlsx  jobs.2026-06-18.2.xlsx  jobs.2026-06-18.6.xlsx  jobs.2026-06-18.xlsx  jobs.2026-06-19.1.xlsx  jobs.2026-06-19.2.xlsx  jobs.2026-06-19.xlsx  jobs.2026-06-21.2.xlsx  jobs.2026-06-22.3.xlsx  jobs.2026-06-23.1.xlsx  jobs.2026-06-23.2.xlsx  jobs.2026-06-23.xlsx  jobs.2026-06-24.xlsx  jobs.2026-06-25.1.xlsx  jobs.2026-06-25.xlsx  jobs.2026-06-26.1.xlsx  jobs.2026-06-26.2.xlsx  jobs.2026-06-27.2.xlsx  jobs.2026-06-28.xlsx  jobs.2026-06-29.xlsx  jobs.2026-06-30.xlsx  jobs.2026-07-01.1.xlsx  jobs.2026-07-01.2.xlsx  jobs.2026-07-01.3.xlsx
docs/: app.js  index.html  styles.css
job_search/: __init__.py  cli.py
job_search/adapters/: __init__.py  adzuna.py  base.py  gov_uk.py  (+7 more)
templates/: dashboard.html.j2  email.html.j2
tests/: test_adapters_adzuna.py  test_cli_sources.py  test_dedup.py  test_filter.py  test_github_workflow.py  test_issue_profile.py  test_queries.py  test_rank.py  test_salary.py  test_workbook_export.py
(+316 files in other folders)
